v1.0.1 removed validation logic from code and did it in proto. Used other rest calls
